--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/reactstrap": "^7.1.3",
+    "@types/yup": "^0.26.12",
     "bootstrap": "^4.3.1",
     "formik": "^1.5.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts-ts": "3.1.0",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
