--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.3",
     "@types/yup": "^0.26.12",
     "bootstrap": "^4.3.1",
     "formik": "^1.5.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "3.1.0",
     "reactstrap": "^7.1.0",
     "yup": "^0.27.0"
