--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
     "reactstrap": "^7.1.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
