--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/node-sass": "^4.11.0",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-stripe-elements": "^1.1.10",
     "@types/reactstrap": "^7.1.3",
     "@types/yup": "^0.26.12",
     "autoprefixer": "7.1.6",
@@ -36,6 +37,7 @@
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
+    "react-stripe-elements": "^2.0.3",
     "reactstrap": "^7.1.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
