--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-stripe-elements": "^1.1.10",
     "@types/reactstrap": "^7.1.3",
+    "@types/stripe-v3": "^3.1.0",
     "@types/yup": "^0.26.12",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
