--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "@types/react-dom": "^16.8.3",
     "typescript": "^3.3.4000"
   },
+  "resolutions": {
+    "@types/react": "^16.8.9"
+  },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
